--- a/Report/refs.bib
+++ b/Report/refs.bib
@@ -10,7 +10,7 @@
     title = {Data Analysis: A Bayesian Tutorial},
     year = {2006},
     publisher = {Oxford University Press, Incorporated},
-    url = {https://ebookcentral.proquest.com/lib/cam/detail.action?docID=430582}
+    url = {https://doi.org/10.1093/oso/9780198568315.001.0001}
 }
 
 
@@ -63,19 +63,6 @@
     urldate = {2024-01-15}
 }
 
-@article{vanRavenzwaaij2018,
-    author = {van Ravenzwaaij, Don and Cassey, Peter and Brown, Scott D.},
-    title = {A simple introduction to Markov Chain Monte–Carlo sampling},
-    year = {2018},
-    journal = {Psychonomic Bulletin & Review},
-    volume = {25},
-    number = {1},
-    pages = {143-154},
-    doi = {10.3758/s13423-016-1015-8},
-    url = {https://doi.org/10.3758/s13423-016-1015-8}
-}
-
-# For why we thin chains
 @article{gareth_roberts_mcmc,
     author = {Roberts, Gareth O. and Rosenthal, Jeffrey S.},
     title = {Examples of Adaptive MCMC},
@@ -86,4 +73,99 @@
     pages = {349-367},
     doi = {10.1198/jcgs.2009.06134},
     url = {https://www.statslab.cam.ac.uk/~grg/teaching/chapter12.pdf}
+}
+@article{knuth_bayesian_evidence,
+    author = {Knuth, Kevin H. and Habeck, Michael and Malakar, Nabin K. and Mubeen, Asim M. and Placek, Ben},
+    title = {Bayesian Evidence and Model Selection},
+    year = {2015},
+    journal = {Digital Signal Processing},
+    volume = {47},
+    pages = {50-67},
+    doi = {10.1016/j.dsp.2015.06.012},
+    url = {https://doi.org/10.48550/arXiv.1411.3013}
+}
+
+@article{ravenzwaaij_markov_chain,
+    author = {van Ravenzwaaij, Don and Cassey, Peter and Brown, Scott D.},
+    title = {A simple introduction to {Markov Chain Monte--Carlo} sampling},
+    year = {2018},
+    journal = {Psychonomic Bulletin \& Review},
+    volume = {25},
+    number = {1},
+    pages = {143--154},
+    doi = {10.3758/s13423-016-1015-8},
+    url = {https://doi.org/10.3758/s13423-016-1015-8}
+}
+
+@online{slideserve_bayesian_evidence,
+    author = {Kindlmann, G. L.},
+    title = {Bayesian Evidence for Visualizing Model Selection Uncertainty},
+    year = {2020},
+    url = {https://www.slideserve.com/aulii/bayesian-evidence-for-visualizing-model-selection-uncertainty-powerpoint-ppt-presentation},
+    urldate = {2024-01-15}
+}
+
+@online{li_monte_carlo,
+    author = {Li, Suyang},
+    title = {Monte Carlo Approximation Methods: Which one should you choose and when?},
+    year = {2023},
+    journal = {Towards Data Science},
+    url = {https://towardsdatascience.com/monte-carlo-approximation-methods-which-one-should-you-choose-and-when-76a3},
+    urldate = {2024-01-15}
+}
+
+@article{metropolis_hastings,
+author = {Robert, Christian P.},
+title = {The Metropolis Hastings Algorithm},
+year = {2015},
+journal = {Statistical Analysis and Data Mining: The ASA Data Science Journal},
+volume = {8},
+number = {4},
+pages = {235-245},
+doi = {10.1002/9781118445112.stat07834},
+url = {https://doi.org/10.1002/9781118445112.stat07834}
+}
+
+@article{bedard_optimal_acceptance_rates,
+author = {Bédard, Mylène},
+title = {Optimal Acceptance Rates for Metropolis Algorithms: Moving Beyond 0.234},
+year = {2006},
+url = {http://probability.ca/jeff/ftpdir/mylene2.pdf}
+}
+
+@article{vandeschoot_bayesian_statistics,
+    author = {van de Schoot, Rens and Depaoli, Sarah and King, Rayko and et al.},
+    title = {Bayesian statistics and modelling},
+    year = {2021},
+    journal = {Nature Reviews Methods Primers},
+    volume = {1},
+    number = {1},
+    pages = {1},
+    doi = {10.1038/s43586-020-00001-2},
+    url = {https://doi.org/10.1038/s43586-020-00001-2}
+}
+
+@online{wiki_metropolis_hastings,
+    author = {Wikipedia},
+    title = {Metropolis-Hastings algorithm},
+    url = {https://en.wikipedia.org/wiki/Metropolis–Hastings_algorithm},
+    urldate = {2024-01-15}
+}
+
+@online{wiki_autocorrelation,
+author = {Wikipedia},
+title = {Auto-correlation of stochastic processes},
+url = {https://en.wikipedia.org/wiki/Autocorrelation#Auto-correlation_of_stochastic_processes}
+}
+
+@article{neal_slice_sampling,
+    author = {Neal, Radford M.},
+    title = {Slice sampling},
+    year = {2003},
+    month = {6},
+    journal = {Annals of Statistics},
+    volume = {31},
+    number = {3},
+    pages = {705-767},
+    doi = {10.1214/aos/1056562461}
 }
