--- a/README
+++ b/README
@@ -36,7 +36,7 @@ $ python src/part_*.py
 
 where ```*``` can be either ```v``` or ```vii```. Each contain the code to get the results for part (v) and part (vii) of the coursework.
 
-Note on time: Running the ```part_v.py``` file should take approximately __ minutes. Running the ```part_vii.py``` file should take longer, closer to ___ minutes. This is based on running all of these on a MacBook Air M2 (2022, Ventura 13.2.1), with 8 GB of Memory, so this may be slower on a container.
+Note on time: Running the ```part_v.py``` file should take close to 2 minutes. Running the ```part_vii.py``` file should take longer, closer to 5-6 minutes. This is based on running all of these on a MacBook Air M2 (2022, Ventura 13.2.1), with 8 GB of Memory, so this may be slower on a container.
 
 
 ## Further development
